release 1.5 (11-2010)
- Fixed issue 587
  https://jersey.dev.java.net/issues/show_bug.cgi?id=587
  Upgrade to tag lib version 1.2 for Jersey's JSP support.
- Fixed issue 487
  https://jersey.dev.java.net/issues/show_bug.cgi?id=487
  Client side LoggingFilter - headers were printed out according to internal
  structure declaration, not as their real representation in final http
  request.
- Fixed issue 593
  https://jersey.dev.java.net/issues/show_bug.cgi?id=593
  Changed internal matching request to utilize an empty InputStream rather
  than a null value.
- Fixed issue 592
  https://jersey.dev.java.net/issues/show_bug.cgi?id=592
  Documented the GlassFish servlet initialization parameter
    org.glassfish.web.isDefaultErrorPageEnabled
  that can be used to disable GlassFish default error page support.
- Fixed issue 590
  https://jersey.dev.java.net/issues/show_bug.cgi?id=590
  Added check before adding container notifier for existing ones and add them
  to new set and move this from ServletCointaner.initiate to configure
  Moved reload functionality to scanning resource config, cache last scanning
  results and use them to compute added/removed classes and reflect this change
  in newly scanned set.
- Fixed issue 589
  https://jersey.dev.java.net/issues/show_bug.cgi?id=589
  Related to https://glassfish.dev.java.net/issues/show_bug.cgi?id=13649
  Checking "assignability" before actually creating instance of class
  found using ServiceFinder to prevent classloading issues.
- Fixed issue 478
  https://jersey.dev.java.net/issues/show_bug.cgi?id=478
  Applies when marshalling a collection to JSON and MAPPED or NATURAL JSON notations
  are used. A JSON array is generated if root unwrapping is set to true.
  Otherwise, if root unwrapping is set to false, a JSON object is returned.

release 1.4 (11-09-2010)
- Fixed issue 431
  https://jersey.dev.java.net/issues/show_bug.cgi?id=431
  The use of @PerSession no longer results in a NotSerializableException when 